--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -15,6 +15,8 @@ build:
   number: 1
   noarch: python
   script:
+    - sed -i '/saspy/d' setup.py
+    - sed -i '/sas-kernel/d' setup.py
     - ${{ PYTHON }} -m pip install . -vv
 
 requirements:
